--- a/radio/src/translations/de.h.txt
+++ b/radio/src/translations/de.h.txt
@@ -526,7 +526,7 @@
 #if defined(PCBSKY9X)
   #define TR_ROTARY_ENCODERS   "DGa\0"
   #define TR_ROTENC_SWITCHES   "DGa"
-#elif defined(PCBGRUVIN9X) || defined(PCBMEGA2560)
+#elif defined(PCBGRUVIN9X) || defined(PCBMEGA2560) || defined(PCBESP_WROOM_32)
   #define TR_ROTARY_ENCODERS   "DGa\0""DGb\0"
   #define TR_ROTENC_SWITCHES   "DGa""DGb"
 #else
