--- a/radio/src/translations/fi.h.txt
+++ b/radio/src/translations/fi.h.txt
@@ -506,7 +506,7 @@
 #if defined(PCBSKY9X)
   #define TR_ROTARY_ENCODERS   "REa\0"
   #define TR_ROTENC_SWITCHES   "REa"
-#elif defined(PCBGRUVIN9X) || defined(PCBMEGA2560)
+#elif defined(PCBGRUVIN9X) || defined(PCBMEGA2560) || defined(PCBESP_WROOM_32)
   #define TR_ROTARY_ENCODERS   "REa\0""REb\0"
   #define TR_ROTENC_SWITCHES   "REa""REb"
 #else
