--- a/radio/src/translations/en.h.txt
+++ b/radio/src/translations/en.h.txt
@@ -317,6 +317,8 @@
   #define TR_VFSWFUNC                  TR_SF_SAFETY "Trainer\0  ""Inst. Trim""Reset\0    ""Set \0     " TR_ADJUST_GVAR "Volume\0   " "SetFailsfe" "RangeCheck" "ModuleBind" TR_SOUND TR_PLAY_TRACK TR_PLAY_VALUE TR_SF_RESERVE TR_SF_PLAY_SCRIPT TR_SF_RESERVE TR_SF_BG_MUSIC TR_VVARIO TR_HAPTIC TR_SDCLOGS "Backlight\0" TR_SF_SCREENSHOT TR_SF_TEST
 #elif defined(PCBGRUVIN9X)
   #define TR_VFSWFUNC                  TR_SF_SAFETY "Trainer\0  ""Inst. Trim""Reset\0    " TR_ADJUST_GVAR TR_SOUND TR_PLAY_TRACK TR_PLAY_BOTH TR_PLAY_VALUE TR_VVARIO TR_HAPTIC TR_SDCLOGS "Backlight\0" TR_SF_TEST
+#elif defined(CPUESP32)
+  #define TR_VFSWFUNC                  TR_SF_SAFETY "Trainer\0  ""Inst. Trim""Reset\0    " TR_ADJUST_GVAR "Volume\0   " TR_SOUND TR_PLAY_TRACK TR_PLAY_VALUE TR_SF_RESERVE TR_SF_PLAY_SCRIPT TR_SF_RESERVE TR_SF_BG_MUSIC TR_VVARIO TR_HAPTIC TR_SDCLOGS "Backlight\0" TR_SF_SCREENSHOT TR_SF_TEST
 #else
   #define TR_VFSWFUNC                  TR_SF_SAFETY "Trainer\0  ""Inst. Trim""Reset\0    " TR_ADJUST_GVAR TR_SOUND TR_PLAY_TRACK TR_PLAY_BOTH TR_PLAY_VALUE TR_VVARIO TR_HAPTIC "Backlight\0" TR_SF_TEST
 #endif
@@ -414,16 +416,16 @@
 #define LEN_GPSFORMAT                  "\004"
 #define TR_GPSFORMAT                   "DMS\0""NMEA"
 
-#define LEN2_VTEMPLATES                12
-#define LEN_VTEMPLATES                 "\014"
-#define TR_TEMPLATE_CLEAR_MIXES        "Clear Mixes "
-#define TR_TEMPLATE_SIMPLE_4CH         "Simple 4-CH "
-#define TR_TEMPLATE_STICKY_TCUT        "Sticky-T-Cut"
-#define TR_TEMPLATE_VTAIL              "V-Tail      "
-#define TR_TEMPLATE_DELTA              "Elevon\\Delta"
-#define TR_TEMPLATE_ECCPM              "eCCPM       "
-#define TR_TEMPLATE_HELI               "Heli Setup  "
-#define TR_TEMPLATE_SERVO_TEST         "Servo Test  "
+#define LEN2_VTEMPLATES                13
+#define LEN_VTEMPLATES                 "\015"
+#define TR_TEMPLATE_CLEAR_MIXES        "Clear Mixes\0 "
+#define TR_TEMPLATE_SIMPLE_4CH         "Simple 4-CH\0 "
+#define TR_TEMPLATE_STICKY_TCUT        "Sticky-T-Cut\0"
+#define TR_TEMPLATE_VTAIL              "V-Tail\0      "
+#define TR_TEMPLATE_DELTA              "Elevon\\Delta\0"
+#define TR_TEMPLATE_ECCPM              "eCCPM\0       "
+#define TR_TEMPLATE_HELI               "Heli Setup\0  "
+#define TR_TEMPLATE_SERVO_TEST         "Servo Test\0  "
 
 #define LEN_VSWASHTYPE                 "\004"
 #define TR_VSWASHTYPE                  "---\0""120\0""120X""140\0""90\0"
